# prism-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  handoff.md  pyproject.toml  requirements-cloud.txt
config/: models.local-dev.yaml  models.yaml
data/: e2e_qa.json  rejection_qa.json  table_subset_queries.json
docs/: bottleneck-analysis-2026-07-07.md  cache-retrieval-spec-2026-07-18.md  eval-protocol.md  incremental-update-delete-design-2026-07-09.md  incremental-update-optimization-spec-2026-07-16.md  incremental-verification-runbook.md  industrial-pdf-rag-architecture.md  industrial-pdf-rag-design.md  prismrag-architecture.html  prismrag-architecture.json  prompt-versioning-design-2026-07-18.md  self-rag-closed-loop-design-2026-07-09.md  table-context-default-decision-protocol.md  table-summary-large-table-design-2026-07-09.md  text-reingest-runbook.md
observability/: dashboard.py  reporter.py
poc/: download_dev_data.py
scripts/: cloud_apply_upload.sh  cloud_boot_a.sh  cloud_boot_b.sh  cloud_boot_cp.sh  cloud_decide_table_context.sh  cloud_env.sh  cloud_self_rag_ab.sh  cloud_setup.sh  cloud_text_reingest.sh  fetch_indexes.py  generate_e2e_qa.py  ingest_pdf.py  ingest_vidore.py  pack_for_cloud.sh  pull_from_cloud.sh  run_api.py  run_e2e_qa.py  run_eval.py  run_failure_clinic.py  run_full_cloud.sh  run_ragas_metrics.py  run_ragas_sanity.py  visual_sanity_check.py
solutions/: table-summary-large-table-optimization.md
src/: config.py  rejection.py
tests/: e2e_local.py  test_ablation.py  test_api.py  (+37 more)
(+200 files in other folders)
